--- a/WriteUp.ipynb
+++ b/WriteUp.ipynb
@@ -4,10 +4,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://mcatalano26.github.io/Data-Science-Final-Project/\n",
-    "\n",
-    "Here is the link to milestone 1 of the final tutorial"
+    "https://mcatalano26.github.io/Data-Science-Final-Project/"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
