Added a second link

--- a/Data Wrangling.ipynb
+++ b/Data Wrangling.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://mcatalano26.github.io/Data-Science-Final-Project/"
+    "https://mcatalano26.github.io/Data-Science-Final-Project/\n",
+    "\n",
+    "https://github.com/mcatalano26/Data-Science-Final-Project"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The first link is a link to the github.io site. The second link is to the github page where you can easily find all of our data."
    ]
   },
   {
